--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,8 @@ python:
   - "nightly"
 install:
   - "pip install ."
-script: "python tests.py"
+  - "pip install -r build_requirements.txt"
+script:
+  - "coverage run tests.py"
+  - "coverage xml -o coverage.xml"
+  - "python-codacy-coverage -r coverage.xml"
