Skip running python-codacy-coverage for python2.6

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,6 @@ install:
 script:
   - "coverage run tests.py"
   - "coverage xml -o coverage.xml"
-  - "python-codacy-coverage -r coverage.xml"
+  - "if [[ $TRAVIS_PYTHON_VERSION != 2.6 ]]; then
+         python-codacy-coverage -r coverage.xml
+     fi"
