Add semicolon in travis.yml as the if statement seems to be concatenated to a single line anyway

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ script:
   - "coverage run tests.py"
   - "coverage xml -o coverage.xml"
   - "if [[ $TRAVIS_PYTHON_VERSION != 2.6 ]]; then
-         python-codacy-coverage -r coverage.xml
+         python-codacy-coverage -r coverage.xml;
      fi"
