Add coveralls to build

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ install:
 script:
   - "coverage run tests.py"
   - "coverage xml -o coverage.xml"
+after_success:
+  - "coveralls"
   - "if [[ $TRAVIS_PYTHON_VERSION != 2.6 ]]; then
          python-codacy-coverage -r coverage.xml;
      fi"
